<resources>
    <string name="app_name">Github User App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="link">https://www.github.com/</string>
    <string name="repository">20 repository</string>
    <string name="following">100 following</string>
    <string name="followers">99 followers</string>
    <string name="location">Location user</string>
    <string name="company">company user</string>
    <string name="full_name">Full Name User</string>
    <string name="detail_user">Detail User</string>
    <string name="following_txt">Following</string>
    <string name="followers_txt">Followers</string>
    <string name="score">score 1</string>
    <string name="empty">empty</string>
    <string name="empty_following">following is empty</string>
    <string name="empty_followers">followers is empty</string>
    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>
    <string name="not_found">Not Found</string>
    <string name="theme">Theme</string>
</resources>