<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_frame"
    tools:context=".ui.detail.DetailFragment"
    tools:ignore="SpeakableTextPresentCheck">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_detail_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_detail_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_detail_user"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btn_back"
                    style="@style/btnBackStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="btn back"
                    android:minWidth="42dp"
                    android:minHeight="42dp"
                    android:src="@drawable/arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/color_arrowback"
                    tools:ignore="HardcodedText,TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/btn_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_settings"
                    app:backgroundTint="@color/transparent"
                    app:iconSize="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_open_github"
                    app:layout_constraintEnd_toStartOf="@+id/btn_open_github"
                    app:layout_constraintTop_toTopOf="@+id/btn_open_github"
                    app:layout_constraintVertical_bias="0.0"
                    app:strokeColor="@color/white"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/btn_open_github"
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:backgroundTint="@color/white"
                    app:icon="@drawable/octicons_mark_github"
                    app:iconSize="24dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toTopOf="@+id/btn_back"
                    app:layout_constraintVertical_bias="0.0"
                    app:strokeColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tv_title_detail_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/detail_user"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toTopOf="@+id/btn_back" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@id/layout_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_detail_user">

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_detail_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        shimmer:duration="700">

                        <include layout="@layout/detail_user_placeholder_layout" />
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_profile_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image_user"
                            android:layout_width="86dp"
                            android:layout_height="86dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/placeholder_image"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_full_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/full_name"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="@+id/image_user"
                            app:layout_constraintStart_toStartOf="@+id/image_user"
                            app:layout_constraintTop_toBottomOf="@+id/image_user" />

                        <TextView
                            android:id="@+id/tv_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/poppins_medium_italic"
                            android:text="@string/username"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="@+id/tv_full_name"
                            app:layout_constraintStart_toStartOf="@+id/tv_full_name"
                            app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />

                        <LinearLayout
                            android:id="@+id/layout_upper"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="@+id/tv_username"
                            app:layout_constraintStart_toStartOf="@+id/tv_username"
                            app:layout_constraintTop_toBottomOf="@id/tv_username">

                            <TextView
                                android:id="@+id/tv_location_user"
                                style="@style/TextViewLightStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="4dp"
                                android:drawablePadding="2dp"
                                android:text="@string/location"
                                app:drawableStartCompat="@drawable/location"
                                app:drawableTint="@color/white" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@color/white"
                                tools:ignore="InefficientWeight" />

                            <TextView
                                android:id="@+id/tv_company"
                                style="@style/TextViewLightStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="4dp"
                                android:drawablePadding="2dp"
                                android:text="@string/company"
                                app:drawableStartCompat="@drawable/apartment"
                                app:drawableTint="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_bottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="@+id/layout_upper"
                            app:layout_constraintStart_toStartOf="@+id/layout_upper"
                            app:layout_constraintTop_toBottomOf="@id/layout_upper">

                            <TextView
                                android:id="@+id/tv_followers"
                                style="@style/TextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="4dp"
                                android:text="@string/followers" />

                            <TextView
                                android:id="@+id/tv_following"
                                style="@style/TextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="4dp"
                                android:text="@string/following" />

                            <TextView
                                android:id="@+id/tv_repository"
                                style="@style/TextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="4dp"
                                android:text="@string/repository" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_menu_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_header"
                    app:tabIndicatorColor="@color/white"
                    app:tabIndicatorFullWidth="false"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:tabTextColor="#DFDFDF"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_user"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="320dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_detail_user" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:baselineAlignBottom="true"
        android:src="@drawable/ic_favorite_fill"
        app:backgroundTint="@color/grey"
        app:layout_anchor="@id/layout_detail_parent"
        app:layout_anchorGravity="bottom|end"
        app:tint="@color/white_300"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>